Added yahoo data cron job

--- a/webapp/app/web/web_templates/screener.html
+++ b/webapp/app/web/web_templates/screener.html
@@ -202,8 +202,8 @@
                     <li>DISCLAIMER: <em>This app and the information contained herein do not constitute any financial or
                         investment advice.</em></li>
                 </ol>
-                <p>Simple stock data_providers. The stocks are filtered from 8000+ stocks traded in the US.</p>
-                <h6>data_providers criterias:</h6>
+                <p>Simple stock screener. The stocks are filtered from 8000+ stocks traded in the US.</p>
+                <h6>screener criterias:</h6>
                 <ul>
                     <li>The current price > SMA50 > SMA150 > SMA200</li>
                     <li>The current price must be at least 30% above the 52 week low.</li>
